--- a/assets/translation/en.json
+++ b/assets/translation/en.json
@@ -1,80 +1,75 @@
 {
-  "login": "Login",
-  "welcome_back": "Welcome Back",
-  "login_to_continue": "Login to continue",
+  "Login": "Login",
+  "Welcome Back": "Welcome Back",
+  "Login to continue": "Login to continue",
   "email": "Email",
   "password": "Password",
-  "dont_have_account": "Don't have an account?",
-  "sign_up": "Sign Up",
-  "create_new_account": "Create new account and start shopping",
-  "name": "Name",
-  "already_have_account": "Already have an account?",
+  "Don't have an account?": "Don't have an account?",
+  "Sign up": "Sign Up",
+  "Create new account and start shoppingt": "Create new account and start shopping",
+  "Name": "Name",
+  "Already have an account?": "Already have an account?",
   "exclusive_offers": "Exclusive Offers",
   "special_offers": "Special Offers",
   "shop_by_category": "Shop by Category",
   "top_picks_for_you": "Top Picks for You",
-  "home": "Home",
-  "orders": "Orders",
-  "cart": "Cart",
-  "profile": "Profile",
-  "my_orders": "My Orders",
-  "paid": "Paid",
-  "cancelled": "CANCELLED",
-  "quantity": "Quantity",
-  "total": "Total",
-  "checkout": "Checkout",
-  "my_profile": "My Profile",
+  "Home": "Home",
+  "Orders": "Orders",
+  "Cart": "Cart",
+  "Profile": "Profile",
+  "My Orders": "My Orders",
+  "Paid": "Paid",
+  "Cancelled": "CANCELLED",
+  "Quantity": "Quantity",
+  "Total": "Total",
+  "Checkout": "Checkout",
+  "My Profile": "My Profile",
   "discount_offers": "Discount & Offers",
-  "order_details": "Order Details",
-  "delivery_info": "Delivery Information",
-  "order_id": "Order ID",
-  "ordered_on": "Ordered on",
-  "customer": "Customer",
-  "phone": "Phone",
-  "address": "Address",
-  "ordered_items": "Ordered Items",
-  "payment_overview": "Payment Overview",
-  "discount": "Discount",
-  "status": "Status",
-  "update_order": "Update My Order",
+  "Order Details": "Order Details",
+  "Delivery Information": "Delivery Information",
+  "Order ID": "Order ID",
+  "Ordered on": "Ordered on",
+  "Customer": "Customer",
+  "Phone": "Phone",
+  "Address": "Address",
+  "Ordered Items": "Ordered Items",
+  "Payment Overview": "Payment Overview",
+  "Discount": "Discount",
+  "Status": "Status",
+  "Update My Order": "Update My Order",
   "PAID": "Paid",
-  "ON_THE_WAY": "On the way",
-  "DELIVERED": "Delivered",
-  "CANCELLED": "Cancelled",
-    "order_options": "Order Options",
-  "choose_order_action": "Choose what you want to do with this order.",
-  "close": "Close",
-  "cancel_order": "Cancel Order",
-  "cancel_order_warning": "Once canceled, this order cannot be changed. To receive these items, you’ll need to place a new order.",
-  "order_cancelled_success": "Order Cancelled Successfully.",
-   "update_profile": "Update Profile",
-  "name_required": "Name cannot be empty.",
-  "email_required": "Email cannot be empty.",
-  "address_required": "Address cannot be empty.",
-  "phone_required": "Phone cannot be empty.",
-  "profile_updated": "Profile Updated",
-    "privacy": "Privacy Policy",
-  "terms": "Terms & Conditions",
-  "logout": "Log Out",
-    "your_cart": "Your Cart",
-  "cart_empty": "Your cart is empty.",
-  "cart_empty_desc": "You haven’t added any product to your cart yet.",
-  "total_amount": "Umumiy summa",
-  "uzs": "so‘m",
-   "payment_info": "💳 Payment Information",
-   "load_receipt": "Load Receipt",
-     "checkout_title": "Checkout Page",
+  "On the way": "On the way",
+  "Delivered": "Delivered",
+    "Order Options": "Order Options",
+  "Choose what you want to do with this order.": "Choose what you want to do with this order.",
+  "Close": "Close",
+  "Cancel Orderr": "Cancel Order",
+  "Once canceled, this order cannot be changed. To receive these items, you’ll need to place a new order.": "Once canceled, this order cannot be changed. To receive these items, you’ll need to place a new order.",
+  "Order Cancelled Successfully.": "Order Cancelled Successfully.",
+   "Update Profile": "Update Profile",
+  "Name cannot be empty.": "Name cannot be empty.",
+  "Email cannot be empty.": "Email cannot be empty.",
+  "Address cannot be empty.": "Address cannot be empty.",
+  "Phone cannot be empty.": "Phone cannot be empty.",
+  "Profile Updated": "Profile Updated",
+  "Log Out": "Log Out",
+    "Your Cart": "Your Cart",
+  "Your cart is empty.": "Your cart is empty.",
+  "You haven’t added any product to your cart yet.": "You haven’t added any product to your cart yet.",
+  "Umumiy summa": "Umumiy summa",
+   "💳 Payment Information": "💳 Payment Information",
+   "Load Receipt": "Load Receipt",
+     "Checkout Page": "Checkout Page",
 
-  "checkout_button": "Pay Now",
-    "product_details_title": "Product Details",
+    "Product Details": "Product Details",
   "only_left": "Only {quantity} left — order soon!",
-  "add_to_cart": "Add to Cart",
-  "buy_now": "Buy Now",
-  "item_added": "Item Added to your cart.",
-    "no_internet_title": "No Internet Connection",
-  "no_internet_message": "Please check your internet connection and try again",
-  "retry_button": "Try Again",
-      "currently_out_of_stock": "Currently out of stock",
-    "available_quantity": "Available quantity"
+  "Add to Cart": "Add to Cart",
+  "Buy Now": "Buy Now",
+  "Item Added to your cart.": "Item Added to your cart.",
+    "No Internet Connection": "No Internet Connection",
+  "nPlease check your internet connection and try again": "Please check your internet connection and try again",
+  "Try Againn": "Try Again",
+      "Currently out of stock": "Currently out of stock",
+    "Available quantity": "Available quantity"
 }
 
