--- a/assets/translation/ru.json
+++ b/assets/translation/ru.json
@@ -1,79 +1,73 @@
 {
-  "login": "Войти",
-  "welcome_back": "С возвращением",
-  "login_to_continue": "Войдите, чтобы продолжить",
-  "email": "Электронная почта",
+  "Login": "Войти",
+  "Welcome Back": "С возвращением",
+  "Login to continue": "Войдите, чтобы продолжить",
+  "email": "Эл. почта",
   "password": "Пароль",
-  "dont_have_account": "Нет аккаунта?",
-  "sign_up": "Регистрация",
-  "create_new_account": "Создайте новый аккаунт и начните покупки",
-  "name": "Имя",
-  "already_have_account": "Уже есть аккаунт?",
+  "Don't have an account?": "Нет аккаунта?",
+  "Sign up": "Регистрация",
+  "Create new account and start shoppingt": "Создайте новый аккаунт и начните покупки",
+  "Name": "Имя",
+  "Already have an account?": "Уже есть аккаунт?",
   "exclusive_offers": "Эксклюзивные предложения",
   "special_offers": "Специальные предложения",
-  "shop_by_category": "Покупка по категориям",
-  "top_picks_for_you": "Лучшие товары для вас",
-  "home": "Главная",
-  "orders": "Заказы",
-  "cart": "Корзина",
-  "profile": "Профиль",
-  "my_orders": "Мои заказы",
-  "paid": "Оплачено",
-  "cancelled": "ОТМЕНЕНО",
-  "quantity": "Количество",
-  "total": "Итого",
-  "checkout": "Оформить заказ",
-  "my_profile": "Мой профиль",
+  "shop_by_category": "Магазин по категориям",
+  "top_picks_for_you": "Лучшие предложения для вас",
+  "Home": "Главная",
+  "Orders": "Заказы",
+  "Cart": "Корзина",
+  "Profile": "Профиль",
+  "My Orders": "Мои заказы",
+  "Paid": "Оплачено",
+  "Cancelled": "Отменено",
+  "Quantity": "Количество",
+  "Total": "Итого",
+  "Checkout": "Оплата",
+  "My Profile": "Мой профиль",
   "discount_offers": "Скидки и предложения",
-  "order_details": "Детали заказа",
-  "delivery_info": "Информация о доставке",
-  "order_id": "ID заказа",
-  "ordered_on": "Заказано",
-  "customer": "Клиент",
-  "phone": "Телефон",
-  "address": "Адрес",
-  "ordered_items": "Заказанные товары",
-  "payment_overview": "Оплата",
-  "discount": "Скидка",
-  "status": "Статус",
-  "update_order": "Обновить заказ",
+  "Order Details": "Детали заказа",
+  "Delivery Information": "Информация о доставке",
+  "Order ID": "ID заказа",
+  "Ordered on": "Заказано",
+  "Customer": "Клиент",
+  "Phone": "Телефон",
+  "Address": "Адрес",
+  "Ordered Items": "Заказанные товары",
+  "Payment Overview": "Информация о платеже",
+  "Discount": "Скидка",
+  "Status": "Статус",
+  "Update My Order": "Обновить заказ",
   "PAID": "Оплачено",
-  "ON_THE_WAY": "В пути",
-  "DELIVERED": "Доставлено",
-  "CANCELLED": "Отменено",
-   "order_options": "Параметры заказа",
-  "choose_order_action": "Выберите действие с этим заказом.",
-  "close": "Закрыть",
-  "cancel_order": "Отменить заказ",
-  "cancel_order_warning": "После отмены заказ изменить нельзя. Чтобы получить эти товары, необходимо оформить новый заказ.",
-  "order_cancelled_success": "Заказ успешно отменён.",
-   "update_profile": "Обновить профиль",
-  "name_required": "Имя не может быть пустым.",
-  "email_required": "Электронная почта не может быть пустой.",
-  "address_required": "Адрес не может быть пустым.",
-  "phone_required": "Телефон не может быть пустым.",
-  "profile_updated": "Профиль обновлен",
-   "privacy": "Политика конфиденциальности",
-  "terms": "Условия и положения",
-  "logout": "Выйти",
-  "your_cart": "Ваша корзина",
-  "cart_empty": "Корзина пуста.",
-  "cart_empty_desc": "Вы ещё не добавили товары в корзину.",
-    "total_amount": "Общая сумма",
-  "uzs": "сум",
-  "payment_info": "💳 Платёжная информация",
-    "load_receipt": "Загрузить чек",
-      "checkout_title": "Страница оплаты заказа",
-
-  "checkout_button": "Оплатить",
-  "product_details_title": "Детали продукта",
-  "only_left": "Осталось всего {quantity} — заказывайте скорее!",
-  "add_to_cart": "Добавить в корзину",
-  "buy_now": "Купить сейчас",
-  "item_added": "Товар добавлен в корзину",
-   "no_internet_title": "Нет подключения к интернету",
-  "no_internet_message": "Пожалуйста, проверьте подключение к интернету и попробуйте снова",
-  "retry_button": "Попробовать снова", 
-     "currently_out_of_stock": "Временно нет в наличии",
-    "available_quantity": "Доступное количество"
+  "On the way": "В пути",
+  "Delivered": "Доставлено",
+  "Order Options": "Опции заказа",
+  "Choose what you want to do with this order.": "Выберите, что вы хотите сделать с этим заказом",
+  "Close": "Закрыть",
+  "Cancel Orderr": "Отменить заказ",
+  "Once canceled, this order cannot be changed. To receive these items, you’ll need to place a new order.": "После отмены этот заказ нельзя изменить. Чтобы получить эти товары, нужно оформить новый заказ.",
+  "Order Cancelled Successfully.": "Заказ успешно отменён",
+  "Update Profile": "Обновить профиль",
+  "Name cannot be empty.": "Имя не может быть пустым",
+  "Email cannot be empty.": "Эл. почта не может быть пустой",
+  "Address cannot be empty.": "Адрес не может быть пустым",
+  "Phone cannot be empty.": "Телефон не может быть пустым",
+  "Profile Updated": "Профиль обновлён",
+  "Log Out": "Выйти",
+  "Your Cart": "Ваша корзина",
+  "Your cart is empty.": "Ваша корзина пуста",
+  "You haven’t added any product to your cart yet.": "Вы ещё не добавили товары в корзину",
+  "Umumiy summa": "Общая сумма",
+  "💳 Payment Information": "💳 Информация о платеже",
+  "Load Receipt": "Загрузить чек",
+  "Checkout Page": "Страница оплаты",
+  "Product Details": "Детали товара",
+  "only_left": "Осталось только {quantity} — закажите скорее!",
+  "Add to Cart": "Добавить в корзину",
+  "Buy Now": "Купить сейчас",
+  "Item Added to your cart.": "Товар добавлен в корзину",
+  "No Internet Connection": "Нет подключения к интернету",
+  "nPlease check your internet connection and try again": "Проверьте подключение к интернету и попробуйте снова",
+  "Try Againn": "Попробовать снова",
+  "Currently out of stock": "В данный момент отсутствует",
+  "Available quantity": "Доступное количество"
 }
