--- a/assets/translation/uz.json
+++ b/assets/translation/uz.json
@@ -1,80 +1,73 @@
 {
-  "login": "Kirish",
-  "welcome_back": "Xush kelibsiz",
-  "login_to_continue": "Davom etish uchun kirish",
-  "email": "Email",
+  "Login": "Kirish",
+  "Welcome Back": "Xush kelibsiz",
+  "Login to continue": "Davom etish uchun kirish",
+  "email": "Elektron pochta",
   "password": "Parol",
-  "dont_have_account": "Hisobingiz yo‘qmi?",
-  "sign_up": "Ro‘yxatdan o‘tish",
-  "create_new_account": "Yangi hisob yaratib xaridni boshlang",
-  "name": "Ism",
-  "already_have_account": "Allaqachon hisobingiz bormi?",
-  "exclusive_offers": "Eksklyuziv takliflar",
-  "special_offers": "Maxsus takliflar",
+  "Don't have an account?": "Hisobingiz yo‘qmi?",
+  "Sign up": "Ro‘yxatdan o‘tish",
+  "Create new account and start shoppingt": "Yangi hisob yarating va xaridni boshlang",
+  "Name": "Ism",
+  "Already have an account?": "Allaqachon hisobingiz bormi?",
+  "exclusive_offers": "Maxsus takliflar",
+  "special_offers": "Maxsus chegirmalar",
   "shop_by_category": "Kategoriya bo‘yicha xarid",
-  "top_picks_for_you": "Siz uchun eng zo‘r mahsulotlar",
-  "home": "Bosh sahifa",
-  "orders": "Buyurtmalar",
-  "cart": "Savat",
-  "profile": "Profil",
-  "my_orders": "Mening buyurtmalarim",
-  "paid": "To‘langan",
-  "cancelled": "Bekor qilingan",
-  "quantity": "Miqdor",
-  "total": "Jami",
-  "checkout": "To‘lovga o‘tish",
-  "my_profile": "Mening profilim",
-  "discount_offers": "Chegirmalar va takliflar",
-  "order_details": "Buyurtma tafsilotlari",
-  "delivery_info": "Yetkazib berish ma'lumotlari",
-  "order_id": "Buyurtma ID",
-  "ordered_on": "Buyurtma berilgan sana",
-  "customer": "Mijoz",
-  "phone": "Telefon",
-  "address": "Manzil",
-  "ordered_items": "Buyurtma qilingan mahsulotlar",
-  "payment_overview": "To'lov tafsilotlari",
-  "discount": "Chegirma",
-  "status": "Holat",
-  "update_order": "Buyurtmani yangilash",
+  "top_picks_for_you": "Siz uchun tanlanganlar",
+  "Home": "Bosh sahifa",
+  "Orders": "Buyurtmalar",
+  "Cart": "Savatcha",
+  "Profile": "Profil",
+  "My Orders": "Mening buyurtmalarim",
+  "Paid": "To‘langan",
+  "Cancelled": "Bekor qilindi",
+  "Quantity": "Miqdor",
+  "Total": "Jami",
+  "Checkout": "To‘lov",
+  "My Profile": "Mening profilim",
+  "discount_offers": "Chegirma va takliflar",
+  "Order Details": "Buyurtma tafsilotlari",
+  "Delivery Information": "Yetkazib berish ma’lumotlari",
+  "Order ID": "Buyurtma ID",
+  "Ordered on": "Buyurtma qilingan sana",
+  "Customer": "Mijoz",
+  "Phone": "Telefon",
+  "Address": "Manzil",
+  "Ordered Items": "Buyurtma qilingan mahsulotlar",
+  "Payment Overview": "To‘lov tafsilotlari",
+  "Discount": "Chegirma",
+  "Status": "Holat",
+  "Update My Order": "Buyurtmani yangilash",
   "PAID": "To‘langan",
-  "ON_THE_WAY": "Yo‘lda",
-  "DELIVERED": "Yetkazilgan",
-  "CANCELLED": "Bekor qilingan",
-  "order_options": "Buyurtma opsiyalari",
-  "choose_order_action": "Bu buyurtma bilan nima qilmoqchisiz?",
-  "close": "Yopish",
-  "cancel_order": "Buyurtmani bekor qilish",
-  "cancel_order_warning": "Bekor qilingach, buyurtmani o‘zgartirib bo‘lmaydi. Ushbu mahsulotlarni olish uchun yangi buyurtma berishingiz kerak.",
-  "order_cancelled_success": "Buyurtma muvaffaqiyatli bekor qilindi.",
-   "update_profile": "Profilni yangilash",
-  "name_required": "Ism bo‘sh bo‘lishi mumkin emas.",
-  "email_required": "Email bo‘sh bo‘lishi mumkin emas.",
-  "address_required": "Manzil bo‘sh bo‘lishi mumkin emas.",
-  "phone_required": "Telefon bo‘sh bo‘lishi mumkin emas.",
-  "profile_updated": "Profil yangilandi",
-    "privacy": "Maxfiylik Siyosati",
-  "terms": "Shartlar va Qoidalar",
-  "logout": "Chiqish",
-   "your_cart": "Savatingiz",
-  "cart_empty": "Savat bo'sh.",
-  "cart_empty_desc": "Hali biron mahsulot qo'shmadingiz.",
-    "total_amount": "Umumiy summa",
-  "uzs": "so‘m",
-  "pay_now": "To‘lash",
-  "payment_info": "💳 To‘lov ma’lumotlari",
-   "load_receipt": "Chekni yuklash",
-     "checkout_title": "Buyurtma to‘lov sahifasi",
-  "checkout_button": "To‘lov qilish",
-    "product_details_title": "Mahsulot tafsilotlari",
+  "On the way": "Yo‘lda",
+  "Delivered": "Yetkazildi",
+  "Order Options": "Buyurtma variantlari",
+  "Choose what you want to do with this order.": "Ushbu buyurtma bilan nima qilishni xohlaysiz?",
+  "Close": "Yopish",
+  "Cancel Orderr": "Buyurtmani bekor qilish",
+  "Once canceled, this order cannot be changed. To receive these items, you’ll need to place a new order.": "Bekor qilingandan so‘ng buyurtmani o‘zgartib bo‘lmaydi. Ushbu mahsulotlarni olish uchun yangi buyurtma berishingiz kerak.",
+  "Order Cancelled Successfully.": "Buyurtma muvaffaqiyatli bekor qilindi.",
+  "Update Profile": "Profilni yangilash",
+  "Name cannot be empty.": "Ism bo‘sh bo‘lishi mumkin emas",
+  "Email cannot be empty.": "Elektron pochta bo‘sh bo‘lishi mumkin emas",
+  "Address cannot be empty.": "Manzil bo‘sh bo‘lishi mumkin emas",
+  "Phone cannot be empty.": "Telefon bo‘sh bo‘lishi mumkin emas",
+  "Profile Updated": "Profil yangilandi",
+  "Log Out": "Chiqish",
+  "Your Cart": "Sizning savatchangiz",
+  "Your cart is empty.": "Savatchangiz bo‘sh",
+  "You haven’t added any product to your cart yet.": "Savatchangizga hali mahsulot qo‘shilmadi",
+  "Umumiy summa": "Umumiy summa",
+  "💳 Payment Information": "💳 To‘lov ma’lumotlari",
+  "Load Receipt": "Kvitaniyani yuklash",
+  "Checkout Page": "To‘lov sahifasi",
+  "Product Details": "Mahsulot tafsilotlari",
   "only_left": "Faqat {quantity} ta qoldi — tezroq buyurtma bering!",
-  "add_to_cart": "Savatga qo‘shish",
-  "buy_now": "Hozir xarid qil",
-  "item_added": "Mahsulot savatga qo‘shildi",
-   "no_internet_title": "Internet Aloqasi Yo'q",
-  "no_internet_message": "Iltimos, internet aloqangizni tekshiring va qayta urinib ko'ring",
-  "retry_button": "Qayta Urinish",
-      "currently_out_of_stock": "Hozirda mavjud emas",
-    "available_quantity": "Mavjud miqdor"
-
+  "Add to Cart": "Savatchaga qo‘shish",
+  "Buy Now": "Hozir xarid qilish",
+  "Item Added to your cart.": "Mahsulot savatchaga qo‘shildi",
+  "No Internet Connection": "Internetga ulanish yo‘q",
+  "nPlease check your internet connection and try again": "Iltimos, internet aloqangizni tekshiring va qayta urinib ko‘ring",
+  "Try Againn": "Qayta urinib ko‘rish",
+  "Currently out of stock": "Hozirda mavjud emas",
+  "Available quantity": "Mavjud miqdor"
 }
